simplify textarea toolbar layout to avoid problems on small resolution displays, fixes #4108
git-svn-id: svn://develop.studip.de/studip/trunk@29117 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -243,17 +243,11 @@ div.overdiv {
 .editor_toolbar {
     display: inline-block;
     font-size: 0.75em;
-    position: relative;
 
     .buttons {
         .clearfix();
         margin: 0 !important;  // Locked since .buttons is pretty generic
         padding: 0 !important; // and other styles could easily interfere
-
-        position: absolute;    // Stretch the buttons above the element
-        left: 0;
-        right: 0;
-        top: 0;
 
         border-spacing: 0; // Chrome needs this
 
